[package]
name = "rust-twilio-token"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.1"
config = "0.13.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
jsonwebtoken = "8.1.1"
chrono = "0.4.19"
rand = "0.8.5"
hmac = "0.12.1"
sha2 = "0.10.2"
hex-literal = "0.3.4"
base64 = "0.13.0"
env_logger = "0.9.0"
log = "0.4.17"
regex = "1.5.6"
